changed ul to drop-down

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 <body>
   <h1>Countries</h1>
   <button id="show-countries">Show Countries</button>
-  <ul id="country-list"></ul>
+  <!-- <ul id="country-list"></ul> -->
+  <select>
+
+  </select>
 </body>
 </html>
