--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
 <body>
   <h1>Countries</h1>
   <button id="show-countries">Show Countries</button>
-  <!-- <ul id="country-list"></ul> -->
-  <select>
-
-  </select>
+  <select></select>
+  <ul id="country-info"></ul>
 </body>
 </html>
