changed display from ul to table

--- a/index.html
+++ b/index.html
@@ -8,6 +8,21 @@
   <h1>Countries</h1>
   <button id="show-countries">Show Countries</button>
   <select></select>
-  <ul id="country-info"></ul>
+  <!-- <ul id="country-info"></ul> -->
+
+  <table>
+    <thead>
+      <tr>
+        <th>Country name</th>
+        <th>Country capital</th>
+        <th>Country population</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr id="info">
+
+      </tr>
+    </tbody>
+  </table>
 </body>
 </html>
