--- a/index.html
+++ b/index.html
@@ -2,27 +2,36 @@
 <html>
 <head>
   <title>Country App</title>
+  <link rel="stylesheet" href="style.css">
   <script src="index.js"></script>
 </head>
 <body>
   <h1>Countries</h1>
-  <button id="show-countries">Show Countries</button>
-  <select></select>
-  <!-- <ul id="country-info"></ul> -->
+  <div class="container">
+    <button id="show-countries">Show Countries</button>
+    <select></select>
+  </div>
+  <div class="container">
 
-  <table>
-    <thead>
-      <tr>
-        <th>Country name</th>
-        <th>Country capital</th>
-        <th>Country population</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr id="info">
 
-      </tr>
-    </tbody>
-  </table>
+    <!-- <ul id="country-info"></ul> -->
+
+    <table>
+      <thead>
+        <tr>
+          <th>Name</th>
+          <th>Capital</th>
+          <th>Population</th>
+          <th>Borders</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr id="info">
+
+        </tr>
+      </tbody>
+    </table>
+  </div>
+
 </body>
 </html>
