--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
 <body>
   <h1>Countries</h1>
   <div class="container">
-    <button id="show-countries">Show Countries</button>
     <select></select>
   </div>
   <div class="container">
@@ -22,7 +21,6 @@
           <th>Name</th>
           <th>Capital</th>
           <th>Population</th>
-          <th>Borders</th>
         </tr>
       </thead>
       <tbody>
@@ -31,6 +29,26 @@
         </tr>
       </tbody>
     </table>
+  </div>
+
+  <div class="container">
+    <h2>Bordering countries</h2>
+  </div>
+
+  <div class="container">
+    <table id="borders">
+      <thead>
+        <tr>
+          <th>Name</th>
+          <th>Capital</th>
+          <th>Population</th>
+        </tr>
+      </thead>
+      <tbody>
+
+      </tbody>
+    </table>
+
   </div>
 
 </body>
