--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   </div>
 
   <div class="container">
-    <table id="borders">
+    <table>
       <thead>
         <tr>
           <th>Name</th>
@@ -44,7 +44,7 @@
           <th>Population</th>
         </tr>
       </thead>
-      <tbody>
+      <tbody id="borders">
 
       </tbody>
     </table>
